// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkActionsToolbar component should render BulkActionsToolbar correctly when selection amount is 0 1`] = `
<div
  className="BulkActionsToolbar"
>
  <div
    className="BulkActionsToolbar__toggle"
  >
    <Tooltip
      content="\\"Select All\\" will select all items on the current page"
    >
      <Button
        className="BulkActionsToolbar__toggleButton"
        context="link"
        onClick={[Function]}
      >
        Select All
      </Button>
    </Tooltip>
  </div>
  <div
    className="BulkActionsToolbar__actions"
  >
    <Tooltip
      key="Compare"
    >
      <span
        className="BulkActionsToolbar__actionWrapper BulkActionsToolbar__actionWrapper--first"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="link"
          disabled={true}
          onClick={[MockFunction]}
        >
          Compare
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Import"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="primary"
          disabled={false}
          onClick={[MockFunction]}
        >
          Import
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Delete"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="brand"
          disabled={false}
          onClick={[MockFunction]}
        >
          Delete
        </Button>
      </span>
    </Tooltip>
  </div>
</div>
`;

exports[`BulkActionsToolbar component should render BulkActionsToolbar correctly when selection amount is more then 0 1`] = `
<div
  className="BulkActionsToolbar BulkActionsToolbar--hasSelection"
>
  <Tooltip>
    <div
      className="BulkActionsToolbar__counter"
    >
      Some results selected
    </div>
  </Tooltip>
  <div
    className="BulkActionsToolbar__toggle"
  >
    <Tooltip
      content="\\"Select All\\" will select all items on the current page"
    >
      <Button
        className="BulkActionsToolbar__toggleButton"
        context="link"
        onClick={[Function]}
      >
        Select All
      </Button>
    </Tooltip>
  </div>
  <div
    className="BulkActionsToolbar__actions"
  >
    <Tooltip
      key="Compare"
    >
      <span
        className="BulkActionsToolbar__actionWrapper BulkActionsToolbar__actionWrapper--first"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="link"
          disabled={true}
          onClick={[MockFunction]}
        >
          Compare
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Import"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="primary"
          disabled={false}
          onClick={[MockFunction]}
        >
          Import
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Delete"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="brand"
          disabled={false}
          onClick={[MockFunction]}
        >
          Delete
        </Button>
      </span>
    </Tooltip>
  </div>
</div>
`;

exports[`BulkActionsToolbar component should render BulkActionsToolbar correctly when toggle is set to "all" 1`] = `
<div
  className="BulkActionsToolbar BulkActionsToolbar--hasSelection"
>
  <Tooltip>
    <div
      className="BulkActionsToolbar__counter"
    >
      Some results selected
    </div>
  </Tooltip>
  <div
    className="BulkActionsToolbar__toggle"
  >
    <Tooltip
      content="\\"Select All\\" will select all items on the current page"
    >
      <Button
        className="BulkActionsToolbar__toggleButton"
        context="link"
        onClick={[Function]}
      >
        Select All
      </Button>
    </Tooltip>
  </div>
  <div
    className="BulkActionsToolbar__actions"
  >
    <Tooltip
      key="Compare"
    >
      <span
        className="BulkActionsToolbar__actionWrapper BulkActionsToolbar__actionWrapper--first"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="link"
          disabled={true}
          onClick={[MockFunction]}
        >
          Compare
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Import"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="primary"
          disabled={false}
          onClick={[MockFunction]}
        >
          Import
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Delete"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="brand"
          disabled={false}
          onClick={[MockFunction]}
        >
          Delete
        </Button>
      </span>
    </Tooltip>
  </div>
</div>
`;

exports[`BulkActionsToolbar component should render BulkActionsToolbar correctly when toggle is set to "none" 1`] = `
<div
  className="BulkActionsToolbar BulkActionsToolbar--hasSelection"
>
  <Tooltip>
    <div
      className="BulkActionsToolbar__counter"
    >
      Some results selected
    </div>
  </Tooltip>
  <div
    className="BulkActionsToolbar__toggle"
  >
    <Tooltip
      content="\\"Select None\\" will unselect all items on the current page"
    >
      <Button
        className="BulkActionsToolbar__toggleButton"
        context="link"
        onClick={[Function]}
      >
        Select None
      </Button>
    </Tooltip>
  </div>
  <div
    className="BulkActionsToolbar__actions"
  >
    <Tooltip
      key="Compare"
    >
      <span
        className="BulkActionsToolbar__actionWrapper BulkActionsToolbar__actionWrapper--first"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="link"
          disabled={true}
          onClick={[MockFunction]}
        >
          Compare
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Import"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="primary"
          disabled={false}
          onClick={[MockFunction]}
        >
          Import
        </Button>
      </span>
    </Tooltip>
    <Tooltip
      key="Delete"
    >
      <span
        className="BulkActionsToolbar__actionWrapper"
      >
        <Button
          className="BulkActionsToolbar__action"
          context="brand"
          disabled={false}
          onClick={[MockFunction]}
        >
          Delete
        </Button>
      </span>
    </Tooltip>
  </div>
</div>
`;
